🩹  Fix white space on out of scroll window pane On smaller devices, when scrolled, white space was visible at bottom

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   --color-error: #ff3456;
 }
 
+body {
+  background-color: var(--color-primary);
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
